pocs/fabric-installer/components/addons/rancher-istio/1.8.3/istio/samples/hello-world/hello-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld
  name: helloworld
  namespace: default
spec:
  ports:
  - name: http-hello
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: helloworld
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
