pocs/fabric-installer/components/addons/rancher-istio/1.8.3/istio/samples/hello-world/hello-world-vs.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-virtual-service
  namespace: default
  labels:
    app: hello-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/service-fabric-gateway
  http:
  - match:
    - uri:
        prefix: /hello
    route:
    - destination:
        host: helloworld
        port:
          number: 80
